--- a/views/users.ejs
+++ b/views/users.ejs
@@ -17,11 +17,14 @@
           Liczba wyświetleń strony:
           <span class="data_count"><%= data.total; %></span>
         </p>
-        <h3>Ostatni tydzień</h3>
+        <h3 class="range-title">Ostatni tydzień</h3>
       </center>
       <div class="chart_container">
+        <select name="range" class="range">
+          <option value="week">Tydzień</option>
+          <option value="month">Miesiąc</option>
+        </select>
         <div class="placeholder">
-       
         </div>
       </div>
       <h3>Odwiedzający stronę</h3>
