Visitors summary text

--- a/views/users.ejs
+++ b/views/users.ejs
@@ -27,6 +27,13 @@
         <div class="placeholder">
         </div>
       </div>
+      <div class="summary">
+        <p class="summary_text">
+        </p>
+        <div class="summary_icon">
+          <img>
+        </div>
+      </div>
       <h3>Odwiedzający stronę</h3>
       <div class="container">
         <% let id = 1  %>
