--- a/public/css/user.css
+++ b/public/css/user.css
@@ -31,7 +31,8 @@ h3 {
   text-align: center;
   padding-bottom: 0.5rem;
 }
-.chart_container {
+.chart_container,
+.summary {
   margin: 0 auto;
   width: 90vw;
   margin-bottom: 1rem;
@@ -56,9 +57,27 @@ h3 {
 
 .placeholder {
   margin: 0 auto;
-  height: 150px;
+  min-height: 150px;
   background-color: #f1c99c;
   border-radius: 10px;
+}
+.summary {
+  color: #7b4505;
+  -webkit-box-shadow: 4px 4px 14px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 4px 4px 14px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: 4px 4px 14px -8px rgba(0, 0, 0, 0.75);
+  display: flex;
+  justify-content: space-between;
+}
+.summary_text {
+  text-align: left;
+  font-size: 0.8rem;
+}
+.summary_icon {
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
@@ -128,11 +147,15 @@ h3 {
 
 @media (min-width: 800px) {
   .user_badge,
-  .chart_container {
+  .chart_container,
+  .summary {
     width: 70vw;
   }
+  .summary_text {
+    font-size: 0.9rem;
+  }
   .placeholder {
-    height: 300px;
+    min-height: 250px;
   }
   .range {
     font-size: 1.2rem;
@@ -140,11 +163,20 @@ h3 {
 }
 @media (min-width: 1150px) {
   .user_badge,
-  .chart_container {
+  .chart_container,
+  .summary {
     width: 50vw;
   }
+  .summary_text {
+    font-size: 1rem;
+  }
   .placeholder {
-    height: 300px;
+    min-height: 250px;
+  }
+}
+@media (min-width: 1600px) {
+  .summary_text {
+    line-height: 2rem;
   }
 }
 .flag_section {
