--- a/views/main.ejs
+++ b/views/main.ejs
@@ -222,6 +222,6 @@
       </p>
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="/public/js/admin_production.min.js"></script>
+    <script src="/public/js/admin.dev.js"></script>
   </body>
 </html>
