--- a/views/users.ejs
+++ b/views/users.ejs
@@ -34,9 +34,9 @@
           <img>
         </div>
       </div>
-      <div class="google">
+      <!-- <div class="google">
         <h2>Google performance</h2>
-      </div>
+      </div> -->
       <h3>Odwiedzający stronę</h3>
       <div class="container">
         <% let id = 1  %>
