--- a/views/main.ejs
+++ b/views/main.ejs
@@ -11,8 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <link rel="stylesheet" href="/public/css/admin.css" />
   </head>
   <body>
@@ -23,8 +22,7 @@
           class="form"
           action="/upload"
           method="post"
-          enctype="multipart/form-data"
-        >
+          enctype="multipart/form-data">
           <label for="image">Wybierz zdjęcia</label>
           <input
             type="file"
@@ -32,16 +30,14 @@
             accept="image/*"
             multiple
             required
-            id="files"
-          />
+            id="files" />
           <input
             placeholder="Podaj tytuł"
             type="text"
             maxlength="100"
             name="title"
             id="title"
-            required
-          />
+            required />
           <input
             placeholder="Podaj cenę"
             type="number"
@@ -50,8 +46,7 @@
             maxlength="5"
             name="price"
             id="price"
-            required
-          />
+            required />
           <textarea
             placeholder="Wpisz opis"
             type="text"
@@ -60,14 +55,13 @@
             id="description"
             cols="30"
             rows="10"
-            required
-          ></textarea>
+            required></textarea>
           <div class="characters_left"><p class="characters">0</p></div>
           <button class="button" type="submit">Prześlij</button>
         </form>
         <progress id="progress" max="100"></progress>
         <div class="response"></div>
-        <!-- <a href="http://localhost:8080/logout" class="logout">Wyloguj</a> -->
+        <!-- <a href="https://admin.noanzo.pl/logout" class="logout">Wyloguj</a> -->
         <div class="thumbzz thumbzz_hidden">
           Kliknij na zdjęcie, które ma być miniaturką.
         </div>
@@ -88,8 +82,7 @@
               y="0px"
               viewBox="0 0 115.28 122.88"
               style="enable-background: new 0 0 115.28 122.88"
-              xml:space="preserve"
-            >
+              xml:space="preserve">
               <style type="text/css">
                 .st0 {
                   fill-rule: evenodd;
@@ -100,8 +93,7 @@
                 <path
                   class="st0"
                   fill="white"
-                  d="M25.38,57h64.88V37.34H69.59c-2.17,0-5.19-1.17-6.62-2.6c-1.43-1.43-2.3-4.01-2.3-6.17V7.64l0,0H8.15 c-0.18,0-0.32,0.09-0.41,0.18C7.59,7.92,7.55,8.05,7.55,8.24v106.45c0,0.14,0.09,0.32,0.18,0.41c0.09,0.14,0.28,0.18,0.41,0.18 c22.78,0,58.09,0,81.51,0c0.18,0,0.17-0.09,0.27-0.18c0.14-0.09,0.33-0.28,0.33-0.41v-11.16H25.38c-4.14,0-7.56-3.4-7.56-7.56 V64.55C17.82,60.4,21.22,57,25.38,57L25.38,57z M45.38,83.83v-5.35h12.28v10.94c-2.35,1.6-4.43,2.7-6.23,3.28 c-1.81,0.58-3.95,0.87-6.43,0.87c-3.05,0-5.54-0.52-7.46-1.56c-1.92-1.04-3.41-2.59-4.47-4.64c-1.06-2.05-1.59-4.42-1.59-7.08 c0-2.81,0.58-5.24,1.74-7.32c1.16-2.07,2.85-3.65,5.08-4.72c1.74-0.83,4.09-1.24,7.03-1.24c2.84,0,4.96,0.26,6.37,0.77 c1.41,0.51,2.58,1.31,3.51,2.39c0.93,1.08,1.63,2.45,2.09,4.11l-7.65,1.38c-0.32-0.98-0.85-1.72-1.6-2.24 c-0.75-0.52-1.71-0.78-2.89-0.78c-1.74,0-3.12,0.6-4.16,1.81c-1.04,1.21-1.55,3.12-1.55,5.74c0,2.78,0.52,4.76,1.57,5.96 c1.04,1.19,2.5,1.79,4.37,1.79c0.89,0,1.73-0.13,2.54-0.38c0.8-0.26,1.72-0.69,2.77-1.31v-2.41H45.38L45.38,83.83z M63.95,67.41 h7.97v25.71h-7.97V67.41L63.95,67.41z M78.9,67.41h19.64v5.53H86.87v4.49h9.98v5.21h-9.98v10.49H78.9V67.41L78.9,67.41z M97.79,57 h9.93c4.16,0,7.56,3.41,7.56,7.56v31.42c0,4.15-3.41,7.56-7.56,7.56h-9.93v13.55c0,1.61-0.65,3.04-1.7,4.1 c-1.06,1.06-2.49,1.7-4.1,1.7c-29.44,0-56.59,0-86.18,0c-1.61,0-3.04-0.64-4.1-1.7c-1.06-1.06-1.7-2.49-1.7-4.1V5.85 c0-1.61,0.65-3.04,1.7-4.1c1.06-1.06,2.53-1.7,4.1-1.7h58.72C64.66,0,64.8,0,64.94,0c0.64,0,1.29,0.28,1.75,0.69h0.09 c0.09,0.05,0.14,0.09,0.23,0.18l29.99,30.36c0.51,0.51,0.88,1.2,0.88,1.98c0,0.23-0.05,0.41-0.09,0.65V57L97.79,57z M67.52,27.97 V8.94l21.43,21.7H70.19c-0.74,0-1.38-0.32-1.89-0.78C67.84,29.4,67.52,28.71,67.52,27.97L67.52,27.97z"
-                />
+                  d="M25.38,57h64.88V37.34H69.59c-2.17,0-5.19-1.17-6.62-2.6c-1.43-1.43-2.3-4.01-2.3-6.17V7.64l0,0H8.15 c-0.18,0-0.32,0.09-0.41,0.18C7.59,7.92,7.55,8.05,7.55,8.24v106.45c0,0.14,0.09,0.32,0.18,0.41c0.09,0.14,0.28,0.18,0.41,0.18 c22.78,0,58.09,0,81.51,0c0.18,0,0.17-0.09,0.27-0.18c0.14-0.09,0.33-0.28,0.33-0.41v-11.16H25.38c-4.14,0-7.56-3.4-7.56-7.56 V64.55C17.82,60.4,21.22,57,25.38,57L25.38,57z M45.38,83.83v-5.35h12.28v10.94c-2.35,1.6-4.43,2.7-6.23,3.28 c-1.81,0.58-3.95,0.87-6.43,0.87c-3.05,0-5.54-0.52-7.46-1.56c-1.92-1.04-3.41-2.59-4.47-4.64c-1.06-2.05-1.59-4.42-1.59-7.08 c0-2.81,0.58-5.24,1.74-7.32c1.16-2.07,2.85-3.65,5.08-4.72c1.74-0.83,4.09-1.24,7.03-1.24c2.84,0,4.96,0.26,6.37,0.77 c1.41,0.51,2.58,1.31,3.51,2.39c0.93,1.08,1.63,2.45,2.09,4.11l-7.65,1.38c-0.32-0.98-0.85-1.72-1.6-2.24 c-0.75-0.52-1.71-0.78-2.89-0.78c-1.74,0-3.12,0.6-4.16,1.81c-1.04,1.21-1.55,3.12-1.55,5.74c0,2.78,0.52,4.76,1.57,5.96 c1.04,1.19,2.5,1.79,4.37,1.79c0.89,0,1.73-0.13,2.54-0.38c0.8-0.26,1.72-0.69,2.77-1.31v-2.41H45.38L45.38,83.83z M63.95,67.41 h7.97v25.71h-7.97V67.41L63.95,67.41z M78.9,67.41h19.64v5.53H86.87v4.49h9.98v5.21h-9.98v10.49H78.9V67.41L78.9,67.41z M97.79,57 h9.93c4.16,0,7.56,3.41,7.56,7.56v31.42c0,4.15-3.41,7.56-7.56,7.56h-9.93v13.55c0,1.61-0.65,3.04-1.7,4.1 c-1.06,1.06-2.49,1.7-4.1,1.7c-29.44,0-56.59,0-86.18,0c-1.61,0-3.04-0.64-4.1-1.7c-1.06-1.06-1.7-2.49-1.7-4.1V5.85 c0-1.61,0.65-3.04,1.7-4.1c1.06-1.06,2.53-1.7,4.1-1.7h58.72C64.66,0,64.8,0,64.94,0c0.64,0,1.29,0.28,1.75,0.69h0.09 c0.09,0.05,0.14,0.09,0.23,0.18l29.99,30.36c0.51,0.51,0.88,1.2,0.88,1.98c0,0.23-0.05,0.41-0.09,0.65V57L97.79,57z M67.52,27.97 V8.94l21.43,21.7H70.19c-0.74,0-1.38-0.32-1.89-0.78C67.84,29.4,67.52,28.71,67.52,27.97L67.52,27.97z" />
               </g>
             </svg>
           </div>
@@ -119,8 +111,7 @@
               x="0px"
               y="0px"
               viewBox="0 0 492.004 492.004"
-              xml:space="preserve"
-            >
+              xml:space="preserve">
               <g>
                 <g>
                   <path
@@ -128,8 +119,7 @@
 			c-5.068,5.064-7.86,11.828-7.86,19.04c0,7.208,2.792,14.2,7.86,19.264L355.9,207.526H26.58C11.732,207.526,0,219.15,0,234.002
 			v22.812c0,14.852,11.732,27.648,26.58,27.648h330.496L252.248,388.926c-5.068,5.072-7.86,11.652-7.86,18.864
 			c0,7.204,2.792,13.88,7.86,18.948l16.132,16.084c5.072,5.072,11.828,7.836,19.044,7.836c7.208,0,13.968-2.8,19.04-7.872
-			l177.68-177.68c5.084-5.088,7.88-11.88,7.86-19.1C492.02,238.762,489.228,231.966,484.14,226.886z"
-                  />
+			l177.68-177.68c5.084-5.088,7.88-11.88,7.86-19.1C492.02,238.762,489.228,231.966,484.14,226.886z" />
                 </g>
               </g>
               <g></g>
@@ -159,11 +149,9 @@
               width="24"
               height="24"
               fill="white"
-              viewBox="0 0 24 24"
-            >
+              viewBox="0 0 24 24">
               <path
-                d="M3 6v18h18v-18h-18zm5 14c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4-18v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712z"
-              />
+                d="M3 6v18h18v-18h-18zm5 14c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4-18v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712z" />
             </svg>
           </div>
           <div class="delete_icon_hide">
@@ -180,8 +168,7 @@
               x="0px"
               y="0px"
               viewBox="0 0 492.004 492.004"
-              xml:space="preserve"
-            >
+              xml:space="preserve">
               <g>
                 <g>
                   <path
@@ -189,8 +176,7 @@
 			c-5.068,5.064-7.86,11.828-7.86,19.04c0,7.208,2.792,14.2,7.86,19.264L355.9,207.526H26.58C11.732,207.526,0,219.15,0,234.002
 			v22.812c0,14.852,11.732,27.648,26.58,27.648h330.496L252.248,388.926c-5.068,5.072-7.86,11.652-7.86,18.864
 			c0,7.204,2.792,13.88,7.86,18.948l16.132,16.084c5.072,5.072,11.828,7.836,19.044,7.836c7.208,0,13.968-2.8,19.04-7.872
-			l177.68-177.68c5.084-5.088,7.88-11.88,7.86-19.1C492.02,238.762,489.228,231.966,484.14,226.886z"
-                  />
+			l177.68-177.68c5.084-5.088,7.88-11.88,7.86-19.1C492.02,238.762,489.228,231.966,484.14,226.886z" />
                 </g>
               </g>
               <g></g>
