--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -36,7 +36,7 @@
             value="<%= data.title; %>"
             id="title"
             required
-            disabled />
+            />
           <input
             placeholder="Podaj cenę"
             type="number"
@@ -47,7 +47,7 @@
             value="<%= data.price; %>"
             id="price"
             required
-            disabled />
+            />
           <textarea
             placeholder="Wpisz opis"
             type="text"
@@ -57,7 +57,7 @@
             cols="30"
             rows="10"
             required
-            disabled>
+            >
 <%= data.description; %></textarea
           >
           <div class="characters_left">
@@ -69,7 +69,7 @@
           <div class="image" id="<%= data.image[i]._id; %>">
             <img class="img <%= data.image[i].thumbnail ? "image_thumb":""; %>"
             src="<%= data.image[i].url; %>" alt="<%= data.title; %>" ></img>
-            <div class="svg">
+            <div class="svg" >
               <svg
                 version="1.1"
                 id="Layer_1"
@@ -79,7 +79,7 @@
                 width="24px"
                 xml:space="preserve">
                 <ellipse
-                  style="fill: #ff00008e"
+                  style="fill: #ff0000"
                   cx="256"
                   cy="256"
                   rx="256"
@@ -107,7 +107,7 @@
           <% } %>
         </div>
         <div class="buttons">
-          <button disabled class="action_button">
+          <button class="action_button" id="submit_changes" data-id="<%= data._id; %>">
             <svg fill="white" version="1.1" id="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" 
             width="20px" height="20px" viewBox="0 0 407.096 407.096"
             xml:space="preserve">
