--- a/views/users.ejs
+++ b/views/users.ejs
@@ -23,6 +23,7 @@
         <select name="range" class="range">
           <option value="week">Tydzień</option>
           <option value="month">Miesiąc</option>
+          <option value="all">Wszystko</option>
         </select>
         <div class="placeholder">
         </div>
