--- a/views/main.ejs
+++ b/views/main.ejs
@@ -61,7 +61,7 @@
         </form>
         <progress id="progress" max="100"></progress>
         <div class="response"></div>
-        <!-- <a href="http://localhost:8080/logout" class="logout">Wyloguj</a> -->
+        <!-- <a href="https://admin.noanzo.pl/logout" class="logout">Wyloguj</a> -->
         <div class="thumbzz thumbzz_hidden">
           Kliknij na zdjęcie, które ma być miniaturką.
         </div>
