--- a/views/users.ejs
+++ b/views/users.ejs
@@ -36,6 +36,71 @@
         </div>
       </div>
       <div class="container">
+        <div class="hours">
+          <div class="hours_headline">
+            <h2>Najpopularniejsze godziny</h2>
+          </div>
+          <div class="hours_stats">
+            <div class="lebels"></div>
+            <div class="lebels"><span>Pon</span></div>
+            <div class="lebels"><span>Wt</span></div>
+            <div class="lebels"><span>Śr</span></div>
+            <div class="lebels"><span>Czw</span></div>
+            <div class="lebels"><span>Pt</span></div>
+            <div class="lebels"><span>Sb</span></div>
+            <div class="lebels"><span>Ndz</span></div>
+            <div class="lebels"><span>6-8</span></div>
+            <div id="M1" class="data"><span></span></div>
+            <div id="T1" class="data"><span></span></div>
+            <div id="W1" class="data"><span></span></div>
+            <div id="TH1" class="data"><span></span></div>
+            <div id="F1" class="data"><span></span></div>
+            <div id="ST1" class="data"><span></span></div>
+            <div id="SA1" class="data"><span></span></div>
+            <div class="lebels"><span>9-11</span></div>
+            <div id="M2" class="data"><span></span></div>
+            <div id="T2" class="data"><span></span></div>
+            <div id="W2" class="data"><span></span></div>
+            <div id="TH2" class="data"><span></span></div>
+            <div id="F2" class="data"><span></span></div>
+            <div id="ST2" class="data"><span></span></div>
+            <div id="SA2" class="data"><span></span></div>
+            <div class="lebels"><span>12-14</span></div>
+            <div id="M3" class="data"><span></span></div>
+            <div id="T3" class="data"><span></span></div>
+            <div id="W3" class="data"><span></span></div>
+            <div id="TH3" class="data"><span></span></div>
+            <div id="F3" class="data"><span></span></div>
+            <div id="ST3" class="data"><span></span></div>
+            <div id="SA3" class="data"><span></span></div>
+            <div class="lebels"><span>15-17</span></div>
+            <div id="M4" class="data"><span></span></div>
+            <div id="T4" class="data"><span></span></div>
+            <div id="W4" class="data"><span></span></div>
+            <div id="TH4" class="data"><span></span></div>
+            <div id="F4" class="data"><span></span></div>
+            <div id="ST4" class="data"><span></span></div>
+            <div id="SA4" class="data"><span></span></div>
+            <div class="lebels"><span>18-20</span></div>
+            <div id="M5" class="data"><span></span></div>
+            <div id="T5" class="data"><span></span></div>
+            <div id="W5" class="data"><span></span></div>
+            <div id="TH5" class="data"><span></span></div>
+            <div id="F5" class="data"><span></span></div>
+            <div id="ST5" class="data"><span></span></div>
+            <div id="SA5" class="data"><span></span></div>
+            <div class="lebels"><span>21-23</span></div>
+            <div id="M6" class="data"><span></span></div>
+            <div id="T6" class="data"><span></span></div>
+            <div id="W6" class="data"><span></span></div>
+            <div id="TH6" class="data"><span></span></div>
+            <div id="F6" class="data"><span></span></div>
+            <div id="ST6" class="data"><span></span></div>
+            <div id="SA6" class="data"><span></span></div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
         <div class="google">
           <div class="google_headline">
             <h2>Słowa kluczowe w <span class="google_text">
