--- a/views/main.ejs
+++ b/views/main.ejs
@@ -207,6 +207,10 @@
       <p class="user_count">
         Liczba wyświetleń strony: <span class="data_count"><%= count; %></span>
       </p>
+      <p class="user_count live_count">
+        Test wyświetleń na żywo od 28.02:
+        <span class="data_count"><b><%= live; %></b></span>
+      </p>
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/public/js/admin.dev.js"></script>
