--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -51,7 +51,7 @@
           <textarea
             placeholder="Wpisz opis"
             type="text"
-            maxlength="300"
+            maxlength="1500"
             name="description"
             id="description"
             cols="30"
@@ -66,7 +66,7 @@
         </form>
         <div class="images_container">
           <% for(var i=0; i < data.image.length; i++) {%>
-          <div class="image" id="<%= data.image[i]._id; %>">
+          <div class="image" id="<%= data.image[i].id; %>">
             <img class="img <%= data.image[i].thumbnail ? "image_thumb":""; %>"
             src="<%= data.image[i].url; %>" alt="<%= data.title; %>" ></img>
             <div class="svg" >
